fixed double menu issue on mobile

--- a/style.css
+++ b/style.css
@@ -416,9 +416,11 @@ bt { font-size: 12px; }
 @media only screen and (max-width: 480px){
 	#pixi-slider{ height: 250px;} 
 	#top-search{display: none;}
+	.navbar-left{display: none;}
 }
 @media only screen and (max-width: 340px){
 	#pixi-slider{ height: 170px;} 
+	.navbar-left{display: none;}
 }
 /*hover class*/
 .navbar-nav li:hover ul.dropdown-menu{
